--- a/OnlineMobileRechargeSystem/OnlineMobileRechargeSystem.csproj
+++ b/OnlineMobileRechargeSystem/OnlineMobileRechargeSystem.csproj
@@ -95,8 +95,12 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="Content\packages.css" />
+    <Content Include="Content\summary.css" />
+    <Content Include="Global.asax" />
     <Content Include="home.aspx" />
     <Content Include="Login.aspx" />
+    <Content Include="packages.aspx" />
     <Content Include="Registration.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
@@ -104,6 +108,7 @@
     <Content Include="Scripts\bootstrap.esm.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="summary.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -128,6 +133,9 @@
     <Compile Include="AdminPage.aspx.designer.cs">
       <DependentUpon>AdminPage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
     <Compile Include="home.aspx.cs">
       <DependentUpon>home.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -146,12 +154,24 @@
     <Compile Include="Migrations\202109290439320_InitialCreate.designer.cs">
       <DependentUpon>202109290439320_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202110051206438_ActivePlanModify1.cs" />
+    <Compile Include="Migrations\202110051206438_ActivePlanModify1.designer.cs">
+      <DependentUpon>202110051206438_ActivePlanModify1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\ActivePlan.cs" />
     <Compile Include="Models\DbContextClass.cs" />
     <Compile Include="Models\Provider.cs" />
     <Compile Include="Models\RechargeList.cs" />
     <Compile Include="Models\TypeofRecharge.cs" />
     <Compile Include="Models\Users.cs" />
+    <Compile Include="packages.aspx.cs">
+      <DependentUpon>packages.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="packages.aspx.designer.cs">
+      <DependentUpon>packages.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registration.aspx.cs">
       <DependentUpon>Registration.aspx</DependentUpon>
@@ -159,6 +179,13 @@
     </Compile>
     <Compile Include="Registration.aspx.designer.cs">
       <DependentUpon>Registration.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="summary.aspx.cs">
+      <DependentUpon>summary.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="summary.aspx.designer.cs">
+      <DependentUpon>summary.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -198,6 +225,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202109290439320_InitialCreate.resx">
       <DependentUpon>202109290439320_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202110051206438_ActivePlanModify1.resx">
+      <DependentUpon>202110051206438_ActivePlanModify1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
